--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ remote_restdoc_dir=restdoc
 # Sonar runner (Code coverage reports) requires more memory to complete
 org.gradle.jvmargs=-XX:MaxPermSize=2g
 
-publishGroup=com.oracle.emaas.emcpssf
-group=com.oracle.emaas.emcpssf
+publishGroup=com.oracle.emaas.emcpssf.test
+
 
 #==============================================================================
 # DevInfraPlugin
