--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -38,12 +38,12 @@ dependencies {
 publishing.publications {
         integTest(MavenPublication) {
                 setArtifactId(project.name + '-' + integTestJar.appendix)
-                setGroupId('com.oracle.emaas.emcpssf.test')
+                setGroupId("${publishGroup}")
                 artifact integTestJar.archivePath
         }
 
         thisJarPublication(MavenPublication) {
-                setGroupId('com.oracle.emaas.emcpssf.test')
+                setGroupId("${publishGroup}")
                 artifact jar
         }
 }
