--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -27,12 +27,12 @@ def versionPathElement = dfversion + "-"+ new SimpleDateFormat("yyMMdd.HHmmss").
 publishing.publications {
     integTest(MavenPublication) {
 			setArtifactId(project.name + '-' + integTestJar.appendix)
-			setGroupId('com.oracle.emaas.emcpssf.test')
+			setGroupId("${publishGroup}")
 			artifact integTestJar.archivePath
     }
     thisJarPublication(MavenPublication) {
 			from project.components.java
-			setGroupId('com.oracle.emaas.emcpssf.test')
+			setGroupId("${publishGroup}")
     }
 }
 
