--- a/savedsearch-web-utils/build.gradle
+++ b/savedsearch-web-utils/build.gradle
@@ -17,12 +17,12 @@ sourceSets {
 publishing.publications {
     integTest(MavenPublication) {
                         setArtifactId(project.name + '-' + integTestJar.appendix)
-                        setGroupId('com.oracle.emaas.emcpssf.test')
+                        setGroupId("${publishGroup}")
                         artifact integTestJar.archivePath
     }
     thisJarPublication(MavenPublication) {
                         from project.components.java
-                        setGroupId('com.oracle.emaas.emcpssf.test')
+                        setGroupId("${publishGroup}")
     }
 }
 
