--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -23,42 +23,16 @@
  * Run the buildscript{} configuration to pull the em-test-infraplugin.
  */
 buildscript {
-    repositories {
-
-	 maven {
-            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
-        }
-        maven {
-            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
-    }
-    dependencies {
-        classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
-	classpath group:"com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "1.0+", transitive: true     
-    }
+apply from: 'test-buildscript-apply.gradle'
 }
-repositories {
-    maven {
-        url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"
-    }
-}
-apply plugin: 'TestInfraPlugin'
-apply plugin: 'DevInfraPlugin'
+apply from: 'test-project-apply.gradle'
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* ************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
  ***************************************************************************************************/
  
  
-/* Your lrg specific code would come here */
 
-repositories {
-maven {
-        url = "${PUB_MAVEN_MY_MAVEN_REPO}"
-    }
-
-        maven {
-            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
-    }
 def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.+')
 def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.+')
 dependencies {
