--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -1,34 +1,13 @@
                                
 buildscript {
-    repositories {
-        maven {  
-            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
-        }                                    
-        maven {                              
-            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"
-        }                                                                  
-    }                                                                      
-    dependencies { 
-         classpath group: "com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "${devinfraVersion}", transitive: true
-         classpath group: "com.oracle.emaas.emdi", name: "TestInfraPlugin", version: "${testinfraVersion}", transitive: true
-        classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"                
-	classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_taskprocessor", version: "${omctfVersion}"  
-    }                                                                                                                         
+   apply from: 'test-buildscript-apply.gradle'                                                                                            
 }  
 apply from: 'setup.gradle'
-apply plugin: 'DevInfraPlugin'                                                                                                
-apply plugin: 'TestInfraPlugin'                                                                                               
+apply from: 'test-project-apply.gradle'                                                                                     
 apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")                             
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest     
 apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")                                                                     
-repositories {
-    maven {  
-        url = "${PUB_MAVEN_MY_MAVEN_REPO}"
-    }                                    
-    maven {                              
-        url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"
-    }                                                                  
-}                                                                      
+                                                                  
 /******* ExtraProperties declaration ******/
 
 dependencies {
