--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -24,6 +24,11 @@
  */
 buildscript {
  apply from: 'test-buildscript-apply.gradle' 
+ dependencies { 
+         
+        classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"                
+        classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_taskprocessor", version: "${omctfVersion}"              
+    }      
 }
 apply from: 'setup.gradle'
 
