--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -31,18 +31,22 @@ buildscript {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
     dependencies {
-	classpath group: "com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "${devinfraVersion}", transitive: true
+	    classpath group: "com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "${devinfraVersion}", transitive: true
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
-        classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_taskprocessor", version: "${omctfVersion}"
-	classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"
     }
 }
 apply from: 'setup.gradle'
 apply plugin: 'DevInfraPlugin'
 apply plugin: 'TestInfraPlugin'
 
-apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")
-apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
+/***************** OMCTF Plugin **********************/
+configurations { omctfPluginConfig }
+dependencies {
+    omctfPluginConfig group: "com.oracle.omc.omctf.testsdk", name: "OMCTFPlugin", version: "${omctfPluginVersion}"
+}
+apply from: getAbsoluteFilePath(project.configurations.omctfPluginConfig,"OMCTFPlugin")
+/************** End of OMCTFPlugin *******************/
+
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* *************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
@@ -138,6 +142,7 @@ task QATest(type:EMTest,dependsOn: DEVTest2){
 	ext.set("testType", "integration")
 }
 
-
-omcTeardown.mustRunAfter(QATest)
-task emcpssf_test_3n (dependsOn: [QATest,omcTeardown])
+task emcpssf_test_3n (dependsOn: [QATest,omcTeardown]) {
+    omcTeardown.mustRunAfter(QATest)
+    apply from: getAbsoluteFilePath(project.configurations.omctfConfig,"omctf_taskprocessor")
+}
