fix farm run issue for omctfplugin

--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -1,7 +1,7 @@
 buildscript {
    apply from: 'test-buildscript-apply.gradle'  
 }  
-
+apply from: 'test-project-apply.gradle'
 /***************** OMCTF Plugin **********************/
 configurations { omctfPluginConfig }
 dependencies {
