--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ allprojects {
 	ext.dependenciesDir = new File(rootDir, 'common') 
 	repositories {  
 		mavenLocal()  
+        if(project.hasProperty('PUB_MAVEN_MY_MAVEN_REPO')) {
+          maven {
+            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+          }
+        }
 		maven {  
 			url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"  
 			credentials {  
@@ -241,7 +246,12 @@ compileJava.dependsOn preBuildCompile
 
 buildscript {  
 	repositories {  
-		mavenLocal()  
+		mavenLocal()
+        if(project.hasProperty('PUB_MAVEN_MY_MAVEN_REPO')) {
+          maven {
+            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+          }
+        }
 		maven { 
 			url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" 
 			credentials {  
