--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.sources=.
 sonar.projectDescription=EM Cloud Platform Saved Search Framework
 
 # git branch for analysis
-sonar.branch=master
+sonar.branch=greenchannel
 
 # Mode of sonar analysis
 sonar.analysis.mode=preview
