--- a/build.gradle
+++ b/build.gradle
@@ -266,7 +266,7 @@ apply from: "${project.ext.source_cc}/codeCoverage.gradle"
 if(project.plugins.hasPlugin('sonar-runner')) {
   sonarRunner {
     sonarProperties {
-      property "sonar.branch", 'greenchannel'
+      property "sonar.branch", 'master'
     }
   }
 }
