commit by shiva

--- a/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
+++ b/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
@@ -6,6 +6,9 @@
  * NOTE that the below code expects SAAS_VERSION environment variable to be set correctly.
  */
 ext.emcpssf_REPO_BID = getRepoBuildIDInProduct(System.env.SAAS_VERSION, emcpssf)
+apply plugin: 'DevInfraPlugin'
+apply plugin: 'TestInfraPlugin'
+
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
  
 dependencies {
