add UT for EMCPSSF-384

--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -93,6 +93,7 @@ task DEVTest(type:EMTest,dependsOn: omcSetup){
 	include "oracle/sysman/emaas/savedsearch/SavedSearchDbExceptionTest.class"
 	include "oracle/sysman/emaas/savedsearch/SearchNonGroupsTest.class"
 	include "oracle/sysman/emaas/savedsearch/FolderManagerNonGroupsTest.class"
+	include "oracle/sysman/emaas/savedsearch/OOBSearchTest.class"
 	useRestAssured =true
 	ext.set("testType", "unit")
 }
