commit by shiva

--- a/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
+++ b/savedsearch-zdt-test-sdk/gradle-sdk/emcpssf_zdtTasksSdk.gradle
@@ -26,7 +26,15 @@ ext.emcpssf_REPO_BID = getRepoBuildIDInProduct(System.env.SAAS_VERSION, 'emcpssf
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
  
 dependencies {
- testConfig group: 'com.oracle.emaas.emcpssf.testsdk', name: 'savedsearch-zdt-test-sdk', version: "${emcpssf_REPO_BID}"
+ //testConfig group: 'com.oracle.emaas.emcpssf.testsdk', name: 'savedsearch-zdt-test-sdk', version: "${emcpssf_REPO_BID}"
+  testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
+    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
+   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
+   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
+    testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-web-integ-tests', version: "${REPO_BID}"
+   testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-core-integ-tests', version: "${REPO_BID}"
+   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
+
     
 }
  
@@ -36,7 +44,8 @@ task emcpssf_zdtPlay(type: EMTest) {
       options.suiteXmlBuilder().suite('name': 'testSdk-test') {
            test('name': 'testSdk-test') {
                classes([:]) {
-                  'class'('name': 'oracle.sysman.emaas.platform.savedsearch.testsdk.SavedsearchOrderWriteCURD')
+                  //'class'('name': 'oracle.sysman.emaas.platform.savedsearch.testsdk.SavedsearchOrderWriteCURD')
+                     'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder.FolderCRUD')
                   
                }
            }
@@ -49,8 +58,8 @@ task emcpssf_zdtPlay(type: EMTest) {
       options.suiteXmlBuilder().suite('name': 'testSdk-test') {
            test('name': 'testSdk-test') {
                classes([:]) {
-                  'class'('name': 'oracle.sysman.emaas.platform.savedsearch.testsdk.SavedsearchOrderWriteCURD')
-                  
+                 //'class'('name': 'oracle.sysman.emaas.platform.savedsearch.testsdk.SavedsearchOrderWriteCURD')
+                  'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder.FolderCRUD')
                }
            }
        }
