--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -16,6 +16,7 @@ jar {
 dependencies {
 	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){transitive = false}
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
+	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13')  { transitive = false }
 	testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 	compile configurations.testNG
 }
