--- a/savedsearch-zdt-test-sdk/test.gradle
+++ b/savedsearch-zdt-test-sdk/test.gradle
@@ -18,7 +18,7 @@ dependencies {
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
     testConfig('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
     testConfig('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
-    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "1.0.+") {transitive = false}
-    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "1.0.+") {transitive = false}
+ //   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "1.0.+") {transitive = false}
+ //   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "1.0.+") {transitive = false}
     testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 }
