--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -60,6 +60,8 @@ dependencies {
 	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
 	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+	testConfig(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
+	testConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17.1'){transitive = false}
 
 	configurations {
 		restAssured.exclude module: "groovy"
