--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -82,8 +82,8 @@ test {
         }
 }
 
-def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.0.0+')
-def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.0.0+')
+def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.+')
+def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.+')
 dependencies {
 	compile project(':savedsearch-entities'){transitive = false}
 	testRuntime(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
