--- a/savedsearch-web-utils/test.gradle
+++ b/savedsearch-web-utils/test.gradle
@@ -11,13 +11,12 @@ task integTestJar (type:Jar) {
 }
 
 dependencies {
-	testConfig project(':savedsearch-web-utils'){ transitive = false }
+	testConfig project(':savedsearch-web-utils')
 
- 	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
-	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
-    testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
-    testConfig(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0'){ transitive = false }
-    testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
-//	testConfig(group: 'weblogic.server', name: 'merged', version: '12.1.2.0.0'){ transitive = false }
+	testConfig getProjectArtifact('servlet-api')
+	testConfig getProjectArtifact('javax.ws.rs-api')
+	testConfig getProjectArtifact('log4j-core')
+	testConfig getProjectArtifact('log4j-api')
+	testConfig getProjectArtifact('wls-api')
+	testConfig getProjectArtifact('jmockit')
 }
