--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -14,10 +14,10 @@ jar {
 }
 
 dependencies {
-	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){transitive = false}
-	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
-	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13')  { transitive = false }
-	testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+	compile getProjectArtifact('javax.persistence')
+	compile getProjectArtifact('eclipselink')
+	compile getProjectArtifact('jackson-core-asl')
+	compile getProjectArtifact('jmockit')
 	compile configurations.testNG
 }
 
