--- a/savedsearch-entities/test.gradle
+++ b/savedsearch-entities/test.gradle
@@ -11,15 +11,15 @@ task integTestJar (type:Jar) {
 }
 
 dependencies {
-	testConfig project(':savedsearch-entities'){ transitive = false }
-	testConfig project(':savedsearch-core'){transitive=false}
+	testConfig project(':savedsearch-entities')
+	testConfig project(':savedsearch-core')
 
-	testConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2'){ transitive = false }
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2'){ transitive = false }
-	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){ transitive = false }
-	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') { transitive = false }
-	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }
-	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
-	testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+	testConfig getProjectArtifact('ojdbc6')
+	testConfig getProjectArtifact('log4j-core')
+	testConfig getProjectArtifact('log4j-api')
+	testConfig getProjectArtifact('javax.persistence')
+	testConfig getProjectArtifact('eclipselink')
+	testConfig getProjectArtifact('javax.transaction-api')
+	testConfig getProjectArtifact('jettison')
+	testConfig getProjectArtifact('jmockit')
 }
