--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -12,11 +12,10 @@ task integTestJar (type:Jar) {
 dependencies {
 	testConfig project(':savedsearch-web'){ transitive = false } 
 	testConfig project(':savedsearch-entities'){ transitive = false }
-	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
-	//testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
-	testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
-    testConfig('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
-    testConfig('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
-    testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+	testConfig getProjectArtifact('servlet-api')
+	testConfig getProjectArtifact('log4j-core')
+	testConfig getProjectArtifact('log4j-api')
+	testConfig getProjectArtifact('jersey-servlet')
+	testConfig getProjectArtifact('jersey-server')
+	testConfig getProjectArtifact('jmockit')
 }
