--- a/build.gradle
+++ b/build.gradle
@@ -192,6 +192,7 @@ dependencies {
                        'org.apache.logging.log4j:log4j-api:2.0.1',
 			'log4j:log4j:1.2.17'
 	prebuild_tenant_sdk 'com.oracle.emaas:emaas-platform-tenant-sdk:0.2'
+	prebuild_tenant_sdk 'com.oracle.emaas.emcpsrvs.sdk:emaas-platform-tenant-sdk:1.0.+'
         prebuild_toplink 'org.eclipse.persistence:eclipselink:2.4.2',
                          'org.eclipse.persistence:javax.persistence:2.0.5'
 	prebuild_servicemanager "${registryClientResolver}",
