--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -65,6 +65,7 @@ sourceSets {
 }
 
 test {
+    classpath = sourceSets.test.compileClasspath  + sourceSets.test.output
         useTestNG()
         {
                 //We explicity include only tests annotate as s1 or s2 - they are "short-running" tests,
