--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -18,7 +18,6 @@ dependencies {
 	compile getProjectArtifact('eclipselink')
 	compile getProjectArtifact('jackson-core-asl')
 	compile getProjectArtifact('jmockit')
-	//compile configurations.testNG
 }
 
 /*
@@ -60,7 +59,7 @@ sourceSets {
                         srcDirs = ['src/integTest/java']
                 }
                 resources.srcDirs = ['src/integTest/java']
-                compileClasspath = compileClasspath + configurations.testNG
+                compileClasspath += configurations.testNG
         }
 }
 
@@ -72,5 +71,12 @@ test {
                 //if you wish to run ALL tests within this projet - remove following.
                 includeGroups 's1' ,'s2'
         }
-build.dependsOn integTestJar}
+build.dependsOn integTestJar
+}
+
+eclipse {
+    classpath {
+        plusConfigurations += configurations.testNG //avoid building error in Eclipse
+    }
+}
 
