--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -137,11 +137,13 @@ sourceSets {
 		java {
 			srcDirs = ['src/integTest/java']
 		}
-	resources.srcDirs = ['src/integTest/java']
+		resources.srcDirs = ['src/integTest/java']
+		compileClasspath += configurations.testNG + configurations.restAssured
 	}
  }
 
 test {
+        classpath = sourceSets.test.compileClasspath + sourceSets.test.output
         useTestNG()
         {
                 //We explicity include only tests annotate as s1 or s2 - they are "short-running" tests,
@@ -176,9 +178,6 @@ dependencies {
 	providedCompile getProjectArtifact('httpclient')
 	providedCompile getProjectArtifact('httpcore')
 	providedCompile getProjectArtifact('httpmime')
-	providedCompile configurations.testNG
-	providedCompile configurations.webdriver
-	providedCompile configurations.restAssured
 
 	providedCompile getProjectArtifact('groovy-all')
 	
