--- a/savedsearch-tools/test.gradle
+++ b/savedsearch-tools/test.gradle
@@ -5,7 +5,7 @@ version = '1.0.1'
 sourceSets {
     integTest {
         java.srcDir 'src/integTest/java'
-	compileClasspath = configurations.testNG+configurations.restAssured+configurations.lrgConfig 
+	compileClasspath = configurations.testNG+configurations.restAssured+configurations.testConfig
 }
 }
 
@@ -16,20 +16,12 @@ task integTestJar (type:Jar) {
 }
 
 dependencies{
-	lrgConfig project(':savedsearch-tools'){transitive=false}
-
-
-        lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){ transitive = false }
-        lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){ transitive = false }
-
-        lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
-        lrgConfig(group: 'log4j', name: 'log4j', version: '1.2.17'){ transitive = false }
-      	lrgConfig(group: 'emaas.platform', name: 'registry-client', version: '1.+'){ transitive = false }
-        lrgConfig(group: 'emaas.platform', name: 'registry-lookup-client', version: '1.+'){ transitive = false }
-
-        lrgConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){ transitive = false }
-
-
-
-
+	testConfig project(':savedsearch-tools'){transitive=false}
+        testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){ transitive = false }
+        testConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){ transitive = false }
+        testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
+        testConfig(group: 'log4j', name: 'log4j', version: '1.2.17'){ transitive = false }
+        testConfig(group: 'emaas.platform', name: 'registry-client', version: '1.+'){ transitive = false }
+        testConfig(group: 'emaas.platform', name: 'registry-lookup-client', version: '1.+'){ transitive = false }
+        testConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){ transitive = false }
 }
